Update SecurityConfig to allow all requests and refine CORS settings for specific frontend origin. Adjust allowed headers and expose necessary CORS headers for improved API accessibility.